--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <div class="container">
   <!-- Minus one Row -->
   <div class="m-one-row">
-    <a href="www.reformeat.com" class="column-link">
+  <a href="https://www.reformeat.com" class="column-link">Visit ReformEat</a>
       <img src="media/reformeat.webp" alt="Banner Image" class="banner">
     </a>
     <img src="logos/rca.webp" alt="Logo Overlay" class="logo-overlay">
