--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
     </a>
     <img src="logos/rca.webp" alt="Logo Overlay" class="logo-overlay">
   </div>
+   <!-- Divider -->
+  <div class="divider"></div>
   <!-- Zeroth Row -->
   <div class="zero-row">
     <a href="/camden-canalwalk" class="column-link">
