--- a/future-fruits/index.html
+++ b/future-fruits/index.html
@@ -60,7 +60,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="https://via.placeholder.com/800x150?text=Long+Logo" alt="Long Logo" class="logo">
+        <img src="../media/orangelogo.png" alt="Long Logo" class="logo">
         
         <div class="video-container">
             <video controls preload="metadata">
