--- a/future-fruits/index.html
+++ b/future-fruits/index.html
@@ -39,12 +39,12 @@
             display: block;
             margin: 20px auto;
         }
-         .video-container {
+        .video-container {
             position: relative;
+            width: 100%; /* Full width */
             padding-bottom: 177.78%; /* 9:16 aspect ratio */
             height: 0;
             overflow: hidden;
-            max-width: 56.25%; /* This will make the video take up about the same width as a 16:9 video would */
             margin: 0 auto; /* Center the video container */
         }
         .video-container video {
