--- a/future-fruits/index.html
+++ b/future-fruits/index.html
@@ -62,7 +62,7 @@
         <img src="../media/orangelogo.png" alt="Long Logo" class="logo">
         
         <div class="video-container">
-            <video autoplay muted loop playsinline>
+            <video id="myVideo" autoplay muted loop playsinline>
                 <source src="../media/orange.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
