--- a/index.html
+++ b/index.html
@@ -51,6 +51,16 @@
   </div>
    <!-- Divider -->
   <div class="divider"></div>
+   <!-- Minus half Row -->
+  <div class="m-half-row">
+  <a href="/future-fruits" class="column-link">
+      <img src="media/futurefruits.webp" alt="Banner Image" class="banner">
+    </a>
+    <img src="logos/rca.webp" alt="Logo Overlay" class="logo-overlay">
+    <img src="logos/acrossrca.webp" alt="Logo Above" class="logo-above">
+  </div>
+   <!-- Divider -->
+  <div class="divider"></div>
   <!-- Zeroth Row -->
   <div class="zero-row">
     <a href="/camden-canalwalk" class="column-link">
