--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <img src="media/futurefruits.webp" alt="Banner Image" class="banner">
     </a>
     <img src="logos/rca.webp" alt="Logo Overlay" class="logo-overlay">
-    <img src="logos/acrossrca.webp" alt="Logo Above" class="logo-above">
+    <img src="logos/acrossrca.webp" alt="Logo Above" class="logo-above-across">
   </div>
    <!-- Divider -->
   <div class="divider"></div>
