--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
   <a href="/future-fruits" class="column-link">
       <img src="media/futurefruits.webp" alt="Banner Image" class="banner">
     </a>
-    <img src="logos/rca.webp" alt="Logo Overlay" class="logo-overlay">
-    <img src="logos/acrossrca.webp" alt="Logo Above" class="logo-above-across">
+    <img src="logos/acrossrca.webp" alt="Logo Overlay" class="logo-overlay">
+    <img src="logos/rca.webp" alt="Logo Above" class="logo-above">
   </div>
    <!-- Divider -->
   <div class="divider"></div>
