--- a/future-fruits/index.html
+++ b/future-fruits/index.html
@@ -121,9 +121,13 @@ body {
         max-width: calc(50% - 10px);
     }
 
-    .video-container-9-16 {
-        max-width: 500px;
-    }
+   .video-container-9-16 {
+    aspect-ratio: 9 / 16;
+    width: 100%;
+    max-width: 400px;
+    margin: 0 auto;
+}
+
 }
 
     </style>
