--- a/future-fruits/index.html
+++ b/future-fruits/index.html
@@ -128,6 +128,12 @@ body {
     margin: 0 auto;
 }
 
+    .video-container-9-16 video {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
 }
 
     </style>
