--- a/future-fruits/index.html
+++ b/future-fruits/index.html
@@ -113,28 +113,35 @@ body {
         flex-direction: row;
         justify-content: center;
         align-items: flex-start;
+        gap: 20px;
     }
 
     .video-container-16-9,
     .video-container-9-16 {
         flex: 1;
         max-width: calc(50% - 10px);
+        padding-bottom: 0; /* Remove padding-bottom */
+        height: auto; /* Allow height to be determined by aspect ratio */
     }
 
-   .video-container-9-16 {
-    aspect-ratio: 9 / 16;
-    width: 100%;
-    max-width: 400px;
-    margin: 0 auto;
-}
+    .video-container-16-9 {
+        aspect-ratio: 16 / 9;
+    }
 
+    .video-container-9-16 {
+        aspect-ratio: 9 / 16;
+        max-width: 400px; /* Limit width to maintain aspect ratio */
+    }
+
+    .video-container-16-9 video,
     .video-container-9-16 video {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+        position: static; /* Remove absolute positioning */
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
 }
 
-}
 
     </style>
 </head>
