--- a/future-fruits/index.html
+++ b/future-fruits/index.html
@@ -103,33 +103,40 @@ body {
 @media (min-width: 1200px) {
     .video-wrapper {
         display: flex;
+        flex-direction: row;
         justify-content: center;
-        align-items: stretch;
+        align-items: center;
         gap: 20px;
+        height: 70vh; /* Fixed container height */
     }
 
     .video-container-16-9,
     .video-container-9-16 {
-        flex: 0 1 auto;
-        height: 50vh;
-        width: auto;
+        height: 100%; /* Use full container height */
+        width: auto; /* Let width adjust based on aspect ratio */
+        position: relative;
+        flex: none; /* Prevent flex stretching */
     }
 
     .video-container-16-9 {
-        aspect-ratio: 16 / 9;
+        aspect-ratio: 16/9;
     }
 
     .video-container-9-16 {
-        aspect-ratio: 9 / 16;
+        aspect-ratio: 9/16;
     }
 
     .video-container-16-9 video,
     .video-container-9-16 video {
+        position: absolute;
+        top: 0;
+        left: 0;
         width: 100%;
         height: 100%;
         object-fit: cover;
     }
 }
+
 
 
 
